--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,31 @@ h1 {
 .rating span {
   margin: 0.1rem;
 }
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex !important;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  width: 400px;
+  padding: 30px;
+  margin: 40px;
+  border-radius: 10%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.carousel a {
+  margin: 0 auto;
+}
